day_5/k8s/deployment-c-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-stable
  namespace: secure-app
  labels:
    app: flask
    version: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
      version: stable
  template:
    metadata:
      labels:
        app: flask
        version: stable
    spec:
      containers:
      - name: flask-app
        image: rshiva86/python-app:1.3
        resources:
          limits:
            memory: "48Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
