day_5/k8s/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: secure-app
  labels:
    app: flask
    version: canary
  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
      version: canary
  template:
    metadata:
      labels:
        app: flask
        version: canary
        access: allowed
    spec:
      containers:
      - name: flask
        image: rshiva86/python-app:1.6
        resources:
          requests:
            cpu: "100m"
            memory: "48Mi"
          limits:
            memory: "64Mi"
            cpu: "200m"
        ports:
        - containerPort: 5000
