day_5/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: secure-app
  labels:
    app: flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask-app
        image: rshiva86/python-app:1.3
        resources:
          limits:
            memory: "48Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
