day_5/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: secure-app
spec:
  selector:
    app: flask
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  type: LoadBalancer
