day_5/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: restrict-access
  namespace: secure-app
spec:
  podSelector:
    matchLabels:
      app: flask
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            access: "allowed"
      - namespaceSelector:
          matchLabels:
            name: monitoring
      - podSelector: 
          matchLabels:
            app.kubernetes.io/name: prometheus
